--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">AsfaltaME</string>
-    <string name="map_key">AIzaSyCuYHwH_F4qzlVLJYDJWIR5FZWS_eN5loA</string>
 
     <string name="menuOptReportList">Todos los Reclamos</string>
     <string name="menuOptNewReport">Nuevo Reclamo</string>
@@ -27,16 +26,12 @@
     <string name="addPicture">Agregar Foto</string>
     <string name="createReport">Crear Reclamo</string>
 
-    <string-array name="reportTypes">
-        <item>Bache</item>
-        <item>Hundimiento</item>
-        <item>Tapa de alcantarilla hundida</item>
-        <item>Múltiples problemas</item>
-    </string-array>
-
     <string name="detailMap">Ver en Mapa</string>
     <string name="supportReport">Apoyar reclamo</string>
     <string name="alreadyFixed">Ya fue arreglado</string>
     <string name="title_activity_maps">Map</string>
+
+    <string name="showOnlyNear">Mostrar sólo los reclamos cercanos</string>
+    <string name="typeFilter">Filtrar por tipo de reclamo:</string>
 
 </resources>
