Importar imágenes de galería

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="menuOptHelp">Ayuda</string>
     <string name="menuOptAbout">Acerca de</string>
     <string name="screenDetail">Detalle de Reclamo</string>
+    <string name="mapSelectLocation">Seleccionar una ubicación</string>
 
     <string-array name="reportType">
         <item>Todos</item>
@@ -15,6 +16,10 @@
         <item>Tapa de alcantarilla hundida</item>
         <item>Múltiples Problemas</item>
     </string-array>
+
+    <string name="dialogTitle">Agregar una foto</string>
+    <string name="dialogGallery">Galería</string>
+    <string name="dialogCamera">Cámara</string>
 
     <string name="email">Email</string>
     <string name="username">Nombre de Usuario</string>
